--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/partheus/glyph#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "fs": "0.0.1-security",
+    "gray-matter": "^4.0.3"
   }
 }
