--- a/.github/workflows/eleventy-build.yml
+++ b/.github/workflows/eleventy-build.yml
@@ -29,8 +29,9 @@ jobs:
           npm ci
           npm run build          
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
         with:
           publish_dir: ./_site
           github_token: ${{ secrets.TOKEN }}
