--- a/.github/workflows/eleventy-build.yml
+++ b/.github/workflows/eleventy-build.yml
@@ -31,7 +31,6 @@ jobs:
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./_site
-          github_token: ${{ secrets.TOKEN }}
+          publish_dir: _site
