--- a/.github/workflows/eleventy-build.yml
+++ b/.github/workflows/eleventy-build.yml
@@ -34,3 +34,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: _site
+          github_token: ${{ secrets.TOKEN }}
