--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "fs": "0.0.1-security",
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.2",
+    "markdown-it-footnote": "^3.0.3"
   }
 }
