--- a/.github/workflows/eleventy-build.yml
+++ b/.github/workflows/eleventy-build.yml
@@ -19,20 +19,28 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # Cache node modules to speed up build times
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies & build
         run: |
-          rm -rf node_modules
           npm ci
-          npm run build          
+          npm run build
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: _site
-          github_token: ${{ secrets.TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
